# motorSistem

./: README.md
Client/_input/: vas_int_r.csv
Client/_output/: log.csv
Client/inc/: client.hpp  i2c.hpp  muscle.hpp  pid.hpp  server.hpp  tcpClient.hpp  tcp_ip.hpp  virtualMotor.hpp  virtual_motor.hpp
Client/src/: i2c.cxx  main.cxx  muscle.cxx  pid.cxx  server.cxx  tcpClient.cxx  tcp_ip.cxx  tcp_ip2.cxx  virtualMotor.cxx
Lib/: tcp_ip.cxx  tcp_ip.hpp
Lib/inc/: tcp_ip2.hpp
Lib/src/: Tcp_Ip.cxx  tcp_ip2.cxx
Lim/: CMakeLists.txt
Server/: CMakeLists.txt
Server/inc/: i2c.hpp  pid.hpp  server.hpp  tcpServer.hpp  tcp_ip.hpp  tcp_ip2.hpp  virtual_motor.hpp
Server/src/: client.cxx  main.cxx  pid.cxx  server.cxx  tcpServer.cxx  tcp_ip.cxx
server/src/: main.cxx
